--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,25 @@
-.App {
-  text-align: center;
+.calculator {
+	width: 300px;
+	height: 500px;
+	border: 1px solid red;
+	margin: 0 auto;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.calculator-output {
+	width: 300px;
+	height: 100px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.calculator-buttons {
+	display: grid;
+	grid-template-columns: repeat(4, 25%);
+	grid-template-rows: repeat(5, 20%);
 }
 
-.App-link {
-  color: #61dafb;
+.calculator-buttons:nth-child(even) {
+	background: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calculator-buttons:nth-child(odd) {
+	background: green;
 }
